src/css/style.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html, body {
    font-family: Times New Roman, Georgia, serif;
    margin: 0;
    padding: 0;
    height: 100%;
}

.problem-bank {
    display: flex;
    border: 3px solid #000;
    margin-bottom: 1.0rem;
}

.problem-cell {
    border: 1px solid #333;
    padding: 6px;
    height: 1.5rem;
    font-size: 0.9rem;
}

.problem-row {
    height: 1.4rem;
}

.problem-digit {
    width: 100%;
    text-align: right;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    font-style: italic;
    font-size: 1.2rem;
    border-top: 0;
    border-bottom: 0;
    
}

.problem-label {
    width: 100%;
    text-align: right;
    display: flex;
    align-items: center;
    justify-content: center;
}

.problem-column {
    display: flex;
    /* max-width: 30px; */
    flex-direction: column;
}

.problem-column ~ .problem-column {
    flex: 1;
}

.answer-page {
    display: flex;
}

#configMenu {
    position: fixed;
    width: calc(100% - 3.0rem);
    height: calc(100% - 3.0rem);
    background: #fff;
    margin: 1.5rem;
    opacity: 0;
    padding: 1.0rem;
    
    /* transition: all 2s; */
}

#configMenu.menuOn {
    animation-duration: 1s, 1s;
    animation-fill-mode: forwards, forwards;
    animation-delay: 1s, 1.8s;
    animation-timing-function: ease-in-out, ease-in-out;
    animation-name: fadein, raiseup;
}

@keyframes fadein {
    from {
        opacity: 0.0;
    }
    to {
        opacity: 1.0;
    }
}


@keyframes raiseup {
    from {
        opacity: 1.0;
        box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.2);
    }
    to {
        opacity: 1.0;
        box-shadow: 0px 0px 1.0rem 1.0rem rgba(0, 0, 0, 0.2);
    }
}

